src/grammar/mipsParser.ts
// Generated from src/grammar/mips.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { mipsListener } from "./mipsListener";

export class mipsParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly COMMENT = 80;
	public static readonly NEWLINE = 81;
	public static readonly WS = 82;
	public static readonly NUM = 83;
	public static readonly HEX_NUM = 84;
	public static readonly ALPHA = 85;
	public static readonly RULE_prog = 0;
	public static readonly RULE_stat = 1;
	public static readonly RULE_inst = 2;
	public static readonly RULE_directive = 3;
	public static readonly RULE_pseudo = 4;
	public static readonly RULE_r_type = 5;
	public static readonly RULE_i_type = 6;
	public static readonly RULE_j_type = 7;
	public static readonly RULE_label = 8;
	public static readonly RULE_iden = 9;
	public static readonly RULE_unsigned_imm = 10;
	public static readonly RULE_signed_imm = 11;
	public static readonly RULE_reg = 12;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"prog", "stat", "inst", "directive", "pseudo", "r_type", "i_type", "j_type", 
		"label", "iden", "unsigned_imm", "signed_imm", "reg",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'.byte'", "'.half'", "'.word'", "'.data'", "'.text'", "'move'", 
		"','", "'bgt'", "'blt'", "'bge'", "'ble'", "'add'", "'addu'", "'and'", 
		"'sub'", "'subu'", "'or'", "'nor'", "'xor'", "'slt'", "'sll'", "'srl'", 
		"'sra'", "'addi'", "'addiu'", "'andi'", "'slti'", "'sltiu'", "'lui'", 
		"'ori'", "'xori'", "'lw'", "'('", "')'", "'lh'", "'lb'", "'sw'", "'sh'", 
		"'sb'", "'beq'", "'bne'", "'jalr'", "'jr'", "'j'", "'jal'", "':'", "'_'", 
		"'-'", "'$zero'", "'$at'", "'$v0'", "'$v1'", "'$a0'", "'$a1'", "'$a2'", 
		"'$a3'", "'$t0'", "'$t1'", "'$t2'", "'$t3'", "'$t4'", "'$t5'", "'$t6'", 
		"'$t7'", "'$s0'", "'$s1'", "'$s2'", "'$s3'", "'$s4'", "'$s5'", "'$s6'", 
		"'$s7'", "'$t8'", "'$t9'", "'$gp'", "'$sp'", "'$fp'", "'$ra'", "'$0'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, "COMMENT", "NEWLINE", "WS", "NUM", "HEX_NUM", 
		"ALPHA",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(mipsParser._LITERAL_NAMES, mipsParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return mipsParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "mips.g4"; }

	// @Override
	public get ruleNames(): string[] { return mipsParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return mipsParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(mipsParser._ATN, this);
	}
	// @RuleVersion(0)
	public prog(): ProgContext {
		let _localctx: ProgContext = new ProgContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, mipsParser.RULE_prog);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 27;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 26;
				this.stat();
				}
				}
				this.state = 29;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << mipsParser.T__0) | (1 << mipsParser.T__1) | (1 << mipsParser.T__2) | (1 << mipsParser.T__3) | (1 << mipsParser.T__4) | (1 << mipsParser.T__5) | (1 << mipsParser.T__7) | (1 << mipsParser.T__8) | (1 << mipsParser.T__9) | (1 << mipsParser.T__10) | (1 << mipsParser.T__11) | (1 << mipsParser.T__12) | (1 << mipsParser.T__13) | (1 << mipsParser.T__14) | (1 << mipsParser.T__15) | (1 << mipsParser.T__16) | (1 << mipsParser.T__17) | (1 << mipsParser.T__18) | (1 << mipsParser.T__19) | (1 << mipsParser.T__20) | (1 << mipsParser.T__21) | (1 << mipsParser.T__22) | (1 << mipsParser.T__23) | (1 << mipsParser.T__24) | (1 << mipsParser.T__25) | (1 << mipsParser.T__26) | (1 << mipsParser.T__27) | (1 << mipsParser.T__28) | (1 << mipsParser.T__29) | (1 << mipsParser.T__30))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (mipsParser.T__31 - 32)) | (1 << (mipsParser.T__34 - 32)) | (1 << (mipsParser.T__35 - 32)) | (1 << (mipsParser.T__36 - 32)) | (1 << (mipsParser.T__37 - 32)) | (1 << (mipsParser.T__38 - 32)) | (1 << (mipsParser.T__39 - 32)) | (1 << (mipsParser.T__40 - 32)) | (1 << (mipsParser.T__41 - 32)) | (1 << (mipsParser.T__42 - 32)) | (1 << (mipsParser.T__43 - 32)) | (1 << (mipsParser.T__44 - 32)) | (1 << (mipsParser.T__46 - 32)))) !== 0) || ((((_la - 80)) & ~0x1F) === 0 && ((1 << (_la - 80)) & ((1 << (mipsParser.COMMENT - 80)) | (1 << (mipsParser.NEWLINE - 80)) | (1 << (mipsParser.NUM - 80)) | (1 << (mipsParser.ALPHA - 80)))) !== 0));
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let _localctx: StatContext = new StatContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, mipsParser.RULE_stat);
		try {
			this.state = 48;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 31;
				this.inst();
				this.state = 32;
				this.match(mipsParser.NEWLINE);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 34;
				this.inst();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 35;
				this.label();
				this.state = 36;
				this.inst();
				this.state = 37;
				this.match(mipsParser.NEWLINE);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 39;
				this.label();
				this.state = 40;
				this.inst();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 42;
				this.label();
				this.state = 43;
				this.match(mipsParser.NEWLINE);
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 45;
				this.label();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 46;
				this.match(mipsParser.NEWLINE);
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 47;
				this.match(mipsParser.COMMENT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public inst(): InstContext {
		let _localctx: InstContext = new InstContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, mipsParser.RULE_inst);
		try {
			this.state = 55;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mipsParser.T__11:
			case mipsParser.T__12:
			case mipsParser.T__13:
			case mipsParser.T__14:
			case mipsParser.T__15:
			case mipsParser.T__16:
			case mipsParser.T__17:
			case mipsParser.T__18:
			case mipsParser.T__19:
			case mipsParser.T__20:
			case mipsParser.T__21:
			case mipsParser.T__22:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 50;
				this.r_type();
				}
				break;
			case mipsParser.T__23:
			case mipsParser.T__24:
			case mipsParser.T__25:
			case mipsParser.T__26:
			case mipsParser.T__27:
			case mipsParser.T__28:
			case mipsParser.T__29:
			case mipsParser.T__30:
			case mipsParser.T__31:
			case mipsParser.T__34:
			case mipsParser.T__35:
			case mipsParser.T__36:
			case mipsParser.T__37:
			case mipsParser.T__38:
			case mipsParser.T__39:
			case mipsParser.T__40:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 51;
				this.i_type();
				}
				break;
			case mipsParser.T__41:
			case mipsParser.T__42:
			case mipsParser.T__43:
			case mipsParser.T__44:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 52;
				this.j_type();
				}
				break;
			case mipsParser.T__5:
			case mipsParser.T__7:
			case mipsParser.T__8:
			case mipsParser.T__9:
			case mipsParser.T__10:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 53;
				this.pseudo();
				}
				break;
			case mipsParser.T__0:
			case mipsParser.T__1:
			case mipsParser.T__2:
			case mipsParser.T__3:
			case mipsParser.T__4:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 54;
				this.directive();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, mipsParser.RULE_directive);
		try {
			this.state = 65;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mipsParser.T__0:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 57;
				_localctx._op = this.match(mipsParser.T__0);
				this.state = 58;
				_localctx._data = this.unsigned_imm();
				}
				break;
			case mipsParser.T__1:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 59;
				_localctx._op = this.match(mipsParser.T__1);
				this.state = 60;
				_localctx._data = this.unsigned_imm();
				}
				break;
			case mipsParser.T__2:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 61;
				_localctx._op = this.match(mipsParser.T__2);
				this.state = 62;
				_localctx._data = this.unsigned_imm();
				}
				break;
			case mipsParser.T__3:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 63;
				_localctx._op = this.match(mipsParser.T__3);
				}
				break;
			case mipsParser.T__4:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 64;
				_localctx._op = this.match(mipsParser.T__4);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pseudo(): PseudoContext {
		let _localctx: PseudoContext = new PseudoContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, mipsParser.RULE_pseudo);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mipsParser.T__5:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 67;
				_localctx._op = this.match(mipsParser.T__5);
				this.state = 68;
				_localctx._rt = this.reg();
				this.state = 69;
				this.match(mipsParser.T__6);
				this.state = 70;
				_localctx._rs = this.reg();
				}
				break;
			case mipsParser.T__7:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 72;
				_localctx._op = this.match(mipsParser.T__7);
				this.state = 73;
				_localctx._rs = this.reg();
				this.state = 74;
				this.match(mipsParser.T__6);
				this.state = 75;
				_localctx._rt = this.reg();
				this.state = 76;
				this.match(mipsParser.T__6);
				this.state = 77;
				_localctx._tag = this.iden();
				}
				break;
			case mipsParser.T__8:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 79;
				_localctx._op = this.match(mipsParser.T__8);
				this.state = 80;
				_localctx._rs = this.reg();
				this.state = 81;
				this.match(mipsParser.T__6);
				this.state = 82;
				_localctx._rt = this.reg();
				this.state = 83;
				this.match(mipsParser.T__6);
				this.state = 84;
				_localctx._tag = this.iden();
				}
				break;
			case mipsParser.T__9:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 86;
				_localctx._op = this.match(mipsParser.T__9);
				this.state = 87;
				_localctx._rs = this.reg();
				this.state = 88;
				this.match(mipsParser.T__6);
				this.state = 89;
				_localctx._rt = this.reg();
				this.state = 90;
				this.match(mipsParser.T__6);
				this.state = 91;
				_localctx._tag = this.iden();
				}
				break;
			case mipsParser.T__10:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 93;
				_localctx._op = this.match(mipsParser.T__10);
				this.state = 94;
				_localctx._rs = this.reg();
				this.state = 95;
				this.match(mipsParser.T__6);
				this.state = 96;
				_localctx._rt = this.reg();
				this.state = 97;
				this.match(mipsParser.T__6);
				this.state = 98;
				_localctx._tag = this.iden();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public r_type(): R_typeContext {
		let _localctx: R_typeContext = new R_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, mipsParser.RULE_r_type);
		try {
			this.state = 186;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mipsParser.T__11:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				_localctx._op = this.match(mipsParser.T__11);
				this.state = 103;
				_localctx._rd = this.reg();
				this.state = 104;
				this.match(mipsParser.T__6);
				this.state = 105;
				_localctx._rs = this.reg();
				this.state = 106;
				this.match(mipsParser.T__6);
				this.state = 107;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__12:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 109;
				_localctx._op = this.match(mipsParser.T__12);
				this.state = 110;
				_localctx._rd = this.reg();
				this.state = 111;
				this.match(mipsParser.T__6);
				this.state = 112;
				_localctx._rs = this.reg();
				this.state = 113;
				this.match(mipsParser.T__6);
				this.state = 114;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__13:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 116;
				_localctx._op = this.match(mipsParser.T__13);
				this.state = 117;
				_localctx._rd = this.reg();
				this.state = 118;
				this.match(mipsParser.T__6);
				this.state = 119;
				_localctx._rs = this.reg();
				this.state = 120;
				this.match(mipsParser.T__6);
				this.state = 121;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__14:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 123;
				_localctx._op = this.match(mipsParser.T__14);
				this.state = 124;
				_localctx._rd = this.reg();
				this.state = 125;
				this.match(mipsParser.T__6);
				this.state = 126;
				_localctx._rs = this.reg();
				this.state = 127;
				this.match(mipsParser.T__6);
				this.state = 128;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__15:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 130;
				_localctx._op = this.match(mipsParser.T__15);
				this.state = 131;
				_localctx._rd = this.reg();
				this.state = 132;
				this.match(mipsParser.T__6);
				this.state = 133;
				_localctx._rs = this.reg();
				this.state = 134;
				this.match(mipsParser.T__6);
				this.state = 135;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__16:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 137;
				_localctx._op = this.match(mipsParser.T__16);
				this.state = 138;
				_localctx._rd = this.reg();
				this.state = 139;
				this.match(mipsParser.T__6);
				this.state = 140;
				_localctx._rs = this.reg();
				this.state = 141;
				this.match(mipsParser.T__6);
				this.state = 142;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__17:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 144;
				_localctx._op = this.match(mipsParser.T__17);
				this.state = 145;
				_localctx._rd = this.reg();
				this.state = 146;
				this.match(mipsParser.T__6);
				this.state = 147;
				_localctx._rs = this.reg();
				this.state = 148;
				this.match(mipsParser.T__6);
				this.state = 149;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__18:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 151;
				_localctx._op = this.match(mipsParser.T__18);
				this.state = 152;
				_localctx._rd = this.reg();
				this.state = 153;
				this.match(mipsParser.T__6);
				this.state = 154;
				_localctx._rs = this.reg();
				this.state = 155;
				this.match(mipsParser.T__6);
				this.state = 156;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__19:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 158;
				_localctx._op = this.match(mipsParser.T__19);
				this.state = 159;
				_localctx._rd = this.reg();
				this.state = 160;
				this.match(mipsParser.T__6);
				this.state = 161;
				_localctx._rs = this.reg();
				this.state = 162;
				this.match(mipsParser.T__6);
				this.state = 163;
				_localctx._rt = this.reg();
				}
				break;
			case mipsParser.T__20:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 165;
				_localctx._op = this.match(mipsParser.T__20);
				this.state = 166;
				_localctx._rd = this.reg();
				this.state = 167;
				this.match(mipsParser.T__6);
				this.state = 168;
				_localctx._rt = this.reg();
				this.state = 169;
				this.match(mipsParser.T__6);
				this.state = 170;
				_localctx._sa = this.unsigned_imm();
				}
				break;
			case mipsParser.T__21:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 172;
				_localctx._op = this.match(mipsParser.T__21);
				this.state = 173;
				_localctx._rd = this.reg();
				this.state = 174;
				this.match(mipsParser.T__6);
				this.state = 175;
				_localctx._rt = this.reg();
				this.state = 176;
				this.match(mipsParser.T__6);
				this.state = 177;
				_localctx._sa = this.unsigned_imm();
				}
				break;
			case mipsParser.T__22:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 179;
				_localctx._op = this.match(mipsParser.T__22);
				this.state = 180;
				_localctx._rd = this.reg();
				this.state = 181;
				this.match(mipsParser.T__6);
				this.state = 182;
				_localctx._rt = this.reg();
				this.state = 183;
				this.match(mipsParser.T__6);
				this.state = 184;
				_localctx._sa = this.unsigned_imm();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public i_type(): I_typeContext {
		let _localctx: I_typeContext = new I_typeContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, mipsParser.RULE_i_type);
		try {
			this.state = 304;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case mipsParser.T__23:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 188;
				_localctx._op = this.match(mipsParser.T__23);
				this.state = 189;
				_localctx._rt = this.reg();
				this.state = 190;
				this.match(mipsParser.T__6);
				this.state = 191;
				_localctx._rs = this.reg();
				this.state = 192;
				this.match(mipsParser.T__6);
				this.state = 193;
				_localctx._simm = this.signed_imm();
				}
				break;
			case mipsParser.T__24:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 195;
				_localctx._op = this.match(mipsParser.T__24);
				this.state = 196;
				_localctx._rt = this.reg();
				this.state = 197;
				this.match(mipsParser.T__6);
				this.state = 198;
				_localctx._rs = this.reg();
				this.state = 199;
				this.match(mipsParser.T__6);
				this.state = 200;
				_localctx._uimm = this.unsigned_imm();
				}
				break;
			case mipsParser.T__25:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 202;
				_localctx._op = this.match(mipsParser.T__25);
				this.state = 203;
				_localctx._rt = this.reg();
				this.state = 204;
				this.match(mipsParser.T__6);
				this.state = 205;
				_localctx._rs = this.reg();
				this.state = 206;
				this.match(mipsParser.T__6);
				this.state = 207;
				_localctx._uimm = this.unsigned_imm();
				}
				break;
			case mipsParser.T__26:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 209;
				_localctx._op = this.match(mipsParser.T__26);
				this.state = 210;
				_localctx._rt = this.reg();
				this.state = 211;
				this.match(mipsParser.T__6);
				this.state = 212;
				_localctx._rs = this.reg();
				this.state = 213;
				this.match(mipsParser.T__6);
				this.state = 214;
				_localctx._simm = this.signed_imm();
				}
				break;
			case mipsParser.T__27:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 216;
				_localctx._op = this.match(mipsParser.T__27);
				this.state = 217;
				_localctx._rt = this.reg();
				this.state = 218;
				this.match(mipsParser.T__6);
				this.state = 219;
				_localctx._rs = this.reg();
				this.state = 220;
				this.match(mipsParser.T__6);
				this.state = 221;
				_localctx._uimm = this.unsigned_imm();
				}
				break;
			case mipsParser.T__28:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 223;
				_localctx._op = this.match(mipsParser.T__28);
				this.state = 224;
				_localctx._rt = this.reg();
				this.state = 225;
				this.match(mipsParser.T__6);
				this.state = 226;
				_localctx._uimm = this.unsigned_imm();
				}
				break;
			case mipsParser.T__29:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 228;
				_localctx._op = this.match(mipsParser.T__29);
				this.state = 229;
				_localctx._rt = this.reg();
				this.state = 230;
				this.match(mipsParser.T__6);
				this.state = 231;
				_localctx._rs = this.reg();
				this.state = 232;
				this.match(mipsParser.T__6);
				this.state = 233;
				_localctx._uimm = this.unsigned_imm();
				}
				break;
			case mipsParser.T__30:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 235;
				_localctx._op = this.match(mipsParser.T__30);
				this.state = 236;
				_localctx._rt = this.reg();
				this.state = 237;
				this.match(mipsParser.T__6);
				this.state = 238;
				_localctx._rs = this.reg();
				this.state = 239;
